[tool.poetry]
name = "spark-streaming-using-x"
version = "0.1.0"
description = ""
authors = ["Oveys Safarnejad <safarnejad@outlook.com>"]
readme = "README.md"
packages = [{include = "spark_streaming_using_x"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.8"
pyspark = "^3.5.0"
findspark = "^2.0.1"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
pandas = "^2.1.3"
py4j = "^0.10.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
